--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -768,9 +768,9 @@
 
  .mobile-menu .nav-logo {
    position: relative;
-   padding: 50px 25px;
+   /* padding: 50px 0px; */
    text-align: left;
-   max-width: 100px;
+   max-width: 150px;
    padding-bottom: 100px;
  }
 
