--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@
  .main-header.style-one .logo-box .logo {
    position: relative;
    display: inline-block;
-   max-width: 300px;
+   max-width: 200px;
    margin-right: 51;
  }
 
@@ -768,7 +768,7 @@
 
  .mobile-menu .nav-logo {
    position: relative;
-   /* padding: 50px 0px; */
+   padding: 50px 25px;
    text-align: left;
    max-width: 150px;
    padding-bottom: 100px;
