--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5774,8 +5774,8 @@
    position: absolute;
    left: 0px;
    top: 0px;
-   width: 80px;
-   height: 80px;
+   width: 10px !important;
+   height: 10px !important;
    border-radius: 50%;
  }
 
